--- a/config/mobile.yaml
+++ b/config/mobile.yaml
@@ -2,4 +2,6 @@ base_url: "https://m.twitch.tv/"
 browser: "chrome"
 emulator_device: "iPhone 12 Pro" 
 mode: "mobile"
+reruns: 3
+reruns_delay: 2
 timeout: 10
