--- a/config/mobile.yaml
+++ b/config/mobile.yaml
@@ -1,4 +1,4 @@
-base_url: "https://m.twitch.tv/"
+base_url: "https://m.twitch.tv"
 browser: "chrome"
 emulator_device: "iPhone 12 Pro"
 generate_report: True
@@ -6,4 +6,5 @@ mode: "mobile"
 reruns: 3
 reruns_delay: 2
 run_in_parallel: 3
+screenshot_folder: 'screenshots'
 timeout: 10
