--- a/config/web.yaml
+++ b/config/web.yaml
@@ -1,5 +1,6 @@
-base_url: "https://m.twitch.tv/"
+base_url: "https://m.twitch.tv"
 browser: "chrome"
 mode: "web"
 reruns: 1
+screenshot_folder: 'screenshots'
 timeout: 10
